--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/SlashContent/Maps/SlashOpenWorld.SlashOpenWorld
 EditorStartupMap=/Game/SlashContent/Maps/SlashOpenWorld.SlashOpenWorld
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
