Added a start location and Created a new class

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,6 +78,8 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/SlashTheIsland")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/SlashTheIsland")
+bUseFixedFrameRate=False
+FixedFrameRate=60.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
